# Control_Drone

./: CMakeLists.txt  README.md  package.xml
include/: control_vel.h
launch/: Prueba1.launch  Prueba1_bn.launch  Prueba2.launch  Prueba2_bn.launch  Prueba2v.launch  Prueba3.launch  Prueba5.launch  Prueba6.launch  PruebaP.launch
scripts/: Segm.txt  Slineas.py  Vision.py  cam_pose.py  centroid.py  control_azP.py  control_orbslam_onlyX.py  control_xP.py  control_xT.py  control_yP.py  control_yT.py  control_zP.py  control_zT.py  np  rospy  segmentacao.py
src/: Pelota.cpp  c_p1.cpp  c_p2.cpp  c_p2v.cpp  c_p5.cpp  c_p6.cpp  c_pt.cpp  c_vaz.cpp  c_vxcall.cpp  c_vy.cpp  c_vy2.cpp  c_vz.cpp  cuadro_c.cpp  l_bn.cpp  l_color.cpp  vi_waypoints.cpp
